--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -14,7 +14,15 @@ jobs:
       run: echo "Hello, world!" > hello.txt
 
     - name: Archive text file
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: hello-artifact
         path: hello.txt
+  download:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Download file
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
