--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -22,11 +22,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Download file
+    - name: Download text file
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
         path: ./artifacts
     
-    - name: Read file contents
+    - name: Display content of the text file
       run: cat ./artifacts/hello.txt
